syntax = "proto3";

package com.evidentdb.service;

import "domain.proto";

option csharp_namespace = "EvidentDB.V1";
option go_package = "evidentdb.com/genproto/v1";
option java_package = "com.evidentdb.service.v1";
option java_multiple_files = true;
option java_outer_classname = "EvidentDbService";
option php_namespace = "Com\\EvidentDB\\V1\\Proto";
option ruby_package = "Com::EvidentDB::V1::Proto";
option objc_class_prefix = "EDB";

service EvidentDb {
  // Command
  rpc createDatabase(com.evidentdb.domain.DatabaseCreationInfo) returns (CreateDatabaseReply) {}
  rpc renameDatabase(com.evidentdb.domain.DatabaseRenameInfo)   returns (RenameDatabaseReply) {}
  rpc deleteDatabase(com.evidentdb.domain.DatabaseDeletionInfo) returns (DeleteDatabaseReply) {}
  rpc transactBatch(com.evidentdb.domain.BatchProposal)         returns (TransactBatchReply)  {}

  // Query
}

// TODO: enum of possibilities
message TransactBatchReply {

}

// TODO: enum of possibilities
message CreateDatabaseReply {

}

// TODO: enum of possibilities
message RenameDatabaseReply {

}

// TODO: enum of possibilities
message DeleteDatabaseReply {

}
